--- a/BookBarnV2/Templates/BookBarnApp/login.html
+++ b/BookBarnV2/Templates/BookBarnApp/login.html
@@ -7,7 +7,7 @@
 {% block body_block %}
 
 
-<div class="container">
+<div class="container mainContainer">
 	<div class="row loginPageHeading">
 		<div class="col">
 			<h4>Login to BookBarn</h4>
