--- a/BookBarnV2/Templates/BookBarnApp/signup.html
+++ b/BookBarnV2/Templates/BookBarnApp/signup.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 
 
-    <div class="container">
+    <div class="container mainContainer">
         {% if registered %}
         <div class="row signupPageHeading">
             <div class="col">
@@ -19,7 +19,7 @@
         </div>
         {% else %}
         <div class="row signupPageHeading">
-            <div class="col-12">
+            <div class="col">
                 <h4>Register here!</h4><br />
             </div>
         </div>
