--- a/BookBarnV2/Templates/SearchApp/searchresult.html
+++ b/BookBarnV2/Templates/SearchApp/searchresult.html
@@ -6,7 +6,7 @@
 
 {% block body_block %}
     
-    <div class="container">
+    <div class="mainContainer">
         <div class="row">
             <div class="col" style="max-width: 850px;">
                 {%if request.GET.q%}
