--- a/BookBarnV2/Templates/BookBarnApp/category.html
+++ b/BookBarnV2/Templates/BookBarnApp/category.html
@@ -4,7 +4,7 @@
 {% block body_block %}
     
 
-    <div class="container">
+    <div class="container mainContainer">
         
         <div class="row">
             <div class="col-4">
