--- a/BookBarnV2/Templates/CartApp/orderplaced.html
+++ b/BookBarnV2/Templates/CartApp/orderplaced.html
@@ -6,7 +6,7 @@
 
 {% block body_block %}
 
-<div class="container">
+<div class="container mainContainer">
     <div class="row">
         <div class="col">
             <h3>Your order has been placed. Product(s) will be delivered in 3 to 5 days!</h3>
