--- a/BookBarnV2/Templates/ProfileApp/order_history.html
+++ b/BookBarnV2/Templates/ProfileApp/order_history.html
@@ -6,7 +6,7 @@
 
 {% block body_block %}
 
-<div class="col-md-8 col-md-offset-2 col-sm-12 maincontent">
+<div class="col-md-8 col-md-offset-2 col-sm-12 mainContainer">
   <div style="text-align: center; text-decoration: underline;">
       <h3>Your Order History</h3>
   </div>
