--- a/BookBarnV2/Templates/ProfileApp/profile.html
+++ b/BookBarnV2/Templates/ProfileApp/profile.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 
 
-    <div class="container">
+    <div class="mainContainer">
         {% if request.user.is_authenticated %}
         <div class="row">
             <div class="col">
