--- a/BookBarnV2/Templates/BookBarnApp/book.html
+++ b/BookBarnV2/Templates/BookBarnApp/book.html
@@ -11,58 +11,58 @@
 <div class="container mainContainer">
     
     <div class="row">
-        <div class="col-4">
-            <div class="bookDetailsLeft">
-                <div class="row">
-                    <div class="bookCoverMain">
+        <div class="col bookDetailsLeftWrapper">
+            
+                <div class="row bookCoverMain">  
                         <img class="img-fluid" src="{{ book.coverImage }}" alt="Cover">
-                    </div>
                 </div>
-                <div class="row">
+
+                <div class="row tableWrapper">
+                    
                     <table class="table table-striped">
-                      <tbody>
-                        <tr class="bg-success">
-                            <th scope="row">Rating:</th>
-                            <td>
-                                <div class="star-ratings-sprite">
-                                    <span style="width:{{ rating_percent }}%" class="star-ratings-sprite-rating"></span>
-                                </div>
-                            </td>                            
-                        </tr>
-                        <tr class="table-primary">
-                            <th scope="row">Price:</th>
-                            <td>&#8377; {{ book.price }}</td>                    
-                        </tr>
-                      </tbody>
+                        <tbody>
+                            <tr class="table-primary">
+                                <th scope="row">Rating:</th>
+                                <td>
+                                    <div class="star-ratings-sprite">
+                                        <span style="width:{{ rating_percent }}%" class="star-ratings-sprite-rating"></span>
+                                    </div>
+                                </td>                            
+                            </tr>
+                            <tr class="table-primary">
+                                <th scope="row">Price:</th>
+                                <td>&#8377; {{ book.price }}</td>               
+                            </tr>
+                        </tbody>
                     </table>
+
                 </div>
                 
-                <div class="row">                    
-                    <span class="storefront_add_to_cart">
-                      {% if book.booksCount == 0 %}
-                        [Out of Stock]
-                      {% else %}
-                        {% if request.user.is_authenticated %}
-                            <!-- This way disable superuser and staff access -->
-                          {% if not request.user.is_superuser and not request.user.is_staff %}
-                            <a class="navLoginLink" href="{% url 'CartApp:add_to_cart' book.isbn %}">                                
-                          {% else %}
-                            <a href="#">
-                          {% endif %}
+                <div class="row">
+                    <div class="col addToCartButtonWrapper">
+                        {% if book.booksCount == 0 %}
+                            <button class="navButton addToCartButton">[Out of Stock]</button>
                         {% else %}
-                            <a class="navLoginLink" href="{% url 'loginView' %}">
+                            {% if request.user.is_authenticated %}
+                                <!-- This way disable superuser and staff access -->
+                                {% if not request.user.is_superuser and not request.user.is_staff %}
+                                    <a class="navLoginLink addToCartButton" href="{% url 'CartApp:add_to_cart' book.isbn %}">
+                                {% else %}
+                                    <a class="addToCartButton" href="#">
+                                {% endif %}
+                            {% else %}
+                                <a class="navLoginLink addToCartButton" href="{% url 'loginView' %}">
+                            {% endif %}
+                                    <button class="navButton">Add to Cart</button>
+                                </a>
                         {% endif %}
-                                <button class="navButton">Add to Cart</button>
-                            </a>
-                        {% endif %}
-                    </span>                    
+                    </div>                                       
                 </div>
-            </div>
+        
         </div>
 
-        <div class="col">
+        <div class="col-8 bookDetailsRightWrapper">
 
-            <div class="bookDetailsRight">
                 <div class="row">
                     <h3>{{ book.bookTitle }}</h3>
                     <hr>
@@ -99,8 +99,7 @@
                         </tr>            
                       </tbody>
                     </table>        
-                </div>
-            </div>            
+                </div>            
         </div>
     </div>
 
