--- a/BookBarnV2/Templates/BookBarnApp/home.html
+++ b/BookBarnV2/Templates/BookBarnApp/home.html
@@ -15,7 +15,7 @@
 
 <div class="container mainContainer">
     <div class="row">        
-        <div class="col">
+        <div class="col-4">
             <div class="categoryListWrapper">
                 <h5 class="categoryListHeader">Book Categories</h5> 
                 <ul class="categoryList">
@@ -67,12 +67,14 @@
 
 
 
-        <div class="col-8">
+        <div class="col">
             
-            <div class="row">
-                <div class="bookShelf">
+            <div class="row bookShelf">
+                <div class="col">
                     <div class="row">
-                    <p>Popular</p> <hr>
+                        <div class="col">
+                            <p>Popular</p> <hr>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -84,13 +86,15 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
+                </div>                
             </div>
             
-            <div class="row">
-                <div class="bookShelf">
+            <div class="row bookShelf">
+                <div class="col">
                     <div class="row">
-                        <p>Popular in Sci-Fiction</p>
+                        <div class="col">
+                            <p>Popular in Science Fiction</p> <hr>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -102,15 +106,16 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
-
+                </div>                
             </div>
 
 
-            <div class="row">
-                <div class="bookShelf">
+            <div class="row bookShelf">
+                <div class="col">
                     <div class="row">
-                        <p>Popular in Fiction</p> 
+                        <div class="col">
+                            <p>Popular in Fiction</p> <hr>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -122,14 +127,15 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
-
+                </div>                
             </div>
             
-            <div class="row">
-                <div class="bookShelf">
+            <div class="row bookShelf">
+                <div class="col">
                     <div class="row">
-                        <p>Popular in Romance</p>
+                        <div class="col">
+                            <p>Popular in Romance</p> <hr>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -141,13 +147,15 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
+                </div>                
             </div>
 
-            <div class="row">
-                <div class="bookShelf">
+            <div class="row bookShelf">
+                <div class="col">
                     <div class="row">
-                        <p>Popular in Thriller</p>
+                        <div class="col">
+                            <p>Popular in Thriller</p> <hr>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -159,13 +167,15 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
+                </div>                
             </div>
 
-            <div class="row">
-                <div class="bookShelf">
+            <div class="row bookShelf">
+                <div class="col">
                     <div class="row">
-                        <p>Popular in Drama</p>
+                        <div class="col">
+                            <p>Popular in Drama</p> <hr>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -177,13 +187,15 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
+                </div>                
             </div>
 
-            <div class="row">
-                <div class="bookShelf">
+            <div class="row bookShelf">
+                <div class="col">
                     <div class="row">
-                        <p>Popular in Mystery</p>
+                        <div class="col">
+                            <p>Popular in Mystery</p> <hr>
+                        </div>
                     </div>
 
                     <div class="row">
@@ -195,7 +207,7 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
+                </div>                
             </div>
         </div>
     </div>  <!-- End of row level 1 -->
