--- a/BookBarnV2/Templates/ProfileApp/update.html
+++ b/BookBarnV2/Templates/ProfileApp/update.html
@@ -9,11 +9,11 @@
 {% block body_block %}
 
 
-    <div class="mainContainer">
+    <div class="container mainContainer">
         {% if request.user.is_authenticated %}
         <div class="row">
-            <div class="col">
-                <h4>Update info here!</h4><br />
+            <div class="col" style="text-align: center;">
+                <h4>Update info here!</h4> <hr>
             </div>
         </div>
         <div class="row">
