--- a/BookBarnV2/Templates/ProfileApp/order_history.html
+++ b/BookBarnV2/Templates/ProfileApp/order_history.html
@@ -6,9 +6,9 @@
 
 {% block body_block %}
 
-<div class="col-md-8 col-md-offset-2 col-sm-12 mainContainer">
-  <div style="text-align: center; text-decoration: underline;">
-      <h3>Your Order History</h3>
+<div class="container mainContainer">
+  <div style="text-align: center;">
+      <h4>Your Order History</h4> <hr>
   </div>
   <div class="cart_container">
 
