--- a/BookBarnV2/Templates/ProfileApp/profile.html
+++ b/BookBarnV2/Templates/ProfileApp/profile.html
@@ -9,38 +9,42 @@
 {% block body_block %}
 
 
-    <div class="mainContainer">
+    <div class="container mainContainer">
         {% if request.user.is_authenticated %}
-        <div class="row">
-            <div class="col">
-                <h4>Hello, {{ request.user.first_name }}</h4><br />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h3>Welcome to the BookBarn - The online book store</h3><br />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                {% if message %}
-                <h6>{{ message }}</h6><br />
-                {% endif %}
-            </div>
-        </div>
-        <br><br>
-        <div class="row">
-            <div class="col">
-                <ul>
-                    <li><a href="{% url 'ProfileApp:updateProfileView'%}">Update Information</a></li>
-                    <li><a href="{% url 'ProfileApp:orderHistoryView'%}">Order History</a></li>
-                    <li><a href="{% url 'ProfileApp:updatePasswordView'%}">Password Reset</a></li>
-                </ul>
-            </div>
-        </div>
-        {% else %}
+
             <div class="row">
                 <div class="col">
+                    <h4>Hello, {{ request.user.first_name }}</h4><br />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <h3>Welcome to BookBarn - The Online Book Store.</h3><br />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    {% if message %}
+                    <h6>{{ message }}</h6><br />
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <ul>
+                        <li><a href="{% url 'ProfileApp:updateProfileView'%}">Update Information</a></li>
+                        <li><a href="{% url 'ProfileApp:orderHistoryView'%}">Order History</a></li>
+                        <li><a href="{% url 'ProfileApp:updatePasswordView'%}">Password Reset</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        {% else %}
+            <div class="row">
+                <div class="col" style="text-align: center;">
                     <h3>You're not logged in.</h3>
                 </div>
             </div>
