--- a/BookBarnV2/Templates/ProfileApp/profile.html
+++ b/BookBarnV2/Templates/ProfileApp/profile.html
@@ -13,19 +13,13 @@
         {% if request.user.is_authenticated %}
 
             <div class="row">
-                <div class="col">
-                    <h4>Hello, {{ request.user.first_name }}</h4><br />
+                <div class="col profileHead">
+                    <h4>Hello, {{ request.user.first_name }}</h4> <hr>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col">
-                    <h3>Welcome to BookBarn - The Online Book Store.</h3><br />
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
+                <div class="col" style="text-align: center">
                     {% if message %}
                     <h6>{{ message }}</h6><br />
                     {% endif %}
@@ -33,12 +27,16 @@
             </div>
 
             <div class="row">
-                <div class="col">
-                    <ul>
-                        <li><a href="{% url 'ProfileApp:updateProfileView'%}">Update Information</a></li>
-                        <li><a href="{% url 'ProfileApp:orderHistoryView'%}">Order History</a></li>
-                        <li><a href="{% url 'ProfileApp:updatePasswordView'%}">Password Reset</a></li>
-                    </ul>
+                <div class="col profileOption">
+                        <a href="{% url 'ProfileApp:updateProfileView'%}" class="profileOptionLink"><button class="profileOptionButton">Update Profile</button></a>
+                </div>
+
+                <div class="col profileOption">
+                    <a href="{% url 'ProfileApp:orderHistoryView'%}" class="profileOptionLink"><button class="profileOptionButton">Order History</button></a>
+                </div>
+
+                <div class="col profileOption">
+                    <a href="{% url 'ProfileApp:updatePasswordView'%}" class="profileOptionLink"><button class="profileOptionButton">Change Password</button></a>
                 </div>
             </div>
 
