--- a/BookBarnV2/Templates/BookBarnApp/category.html
+++ b/BookBarnV2/Templates/BookBarnApp/category.html
@@ -59,26 +59,28 @@
             <div class="col">
                 <div class="row">
                     <div class="col">
-                        <div class="searchHead">                      
-                            <span>Showing you {{ books|length }} book{{ books|pluralize }}</span>
+                        <div class="categoryHead">                      
+                            <h4>Showing you {{ books|length }} book{{ books|pluralize }}</h4> <hr>
                         </div>
                     </div>
                 </div>
                 
 
                 {% for book in books %}
-                <div class="row">
-                    <div class="searchResultShelf">
-                        <div class="col-4">
-                            <img src="{{ book.coverImage }}" alt="Book Cover" class="img-fluid" height="100" width="100">
+                <div class="categoryResultShelf">
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="categoryBookCover">
+                                <a href="{{ book.get_absolute_url }}"><img src="{{ book.coverImage }}" alt="Book Cover" class="img-fluid" height="100" width="100"></a>
+                            </div>
                         </div>
                         <div class="col">
                             <ul>
-                                        <li><strong>Title : {{ book.bookTitle }}</strong></li>
-                                        <li>ISBN : {{ book.isbn }}</li>
-                                        <li>GoodReads Rating : {{ book.rating }}</li>
-                                        <li>Language : {{ book.language }}</li>
-                                        <li>Price : &#8377; {{book.price}}</li>
+                                <li><strong>Title : {{ book.bookTitle }}</strong></li>
+                                <li>ISBN : {{ book.isbn }}</li>
+                                <li>GoodReads Rating : {{ book.rating }}</li>
+                                <li>Language : {{ book.language }}</li>
+                                <li>Price : &#8377; {{book.price}}</li>
                             </ul> 
                         </div>
                     </div>
