--- a/BookBarnV2/Templates/CartApp/orderplaced.html
+++ b/BookBarnV2/Templates/CartApp/orderplaced.html
@@ -8,8 +8,9 @@
 
 <div class="container mainContainer">
     <div class="row">
-        <div class="col">
-            <h3>Your order has been placed. Product(s) will be delivered in 3 to 5 days!</h3>
+        <div class="col" style="text-align: center;">
+            <h4>Your order has been placed. Product(s) will be delivered in 3 to 5 days!</h4>
+            <a href="{% url 'homeView' %}"><button class="btn btn-success">Continue Shopping</button></a>
         </div>
     </div>
 </div>
